# ai-ml-learning

./: .gitignore  .gitmodules  computer-vision-learning.ipynb  convolution_test.ipynb  cv-test.ipynb  ewma_learning.ipynb  gan-pytorch-mnist.ipynb  langchain-test.ipynb  nlp_learning.ipynb  oldreq.txt  opencv_line_detection.py  pose-detection-realtime.py  pyspark_flight_delay_analysis.py  pytorch_learning.ipynb  random-forest.ipynb  readme.md  regularized-regression-linear.py  requirements-ml.txt  requirements.txt  sample.ipynb  semantic-segmentation.py
audio-ai-ml/: openai_audio_models.py
auto-supervised-learning/: classification_movie_sentiment_1.npy  teacher-student-reinforcement.ipynb
computer-vision-opencv/: convolution.ipynb
datascience/: movie_db_analysis.ipynb
deep-learning/: 2_layer_nn_scratch.py  basic_neural_nets.ipynb  classic_cnns.ipynb  dinosaur-name-generator-rnn.ipynb  emotion_detector_inference.ipynb  image_classifier_neural_nets.ipynb  resnet_50_signs_inference.py  resnet_basic.ipynb  sign-language-digit-classifier.ipynb  single_layer_neuralnets.ipynb  word_embeddings.ipynb
langchain_learning/: langchain_basic_chains.ipynb
language-models/: abstractive_text_summarizer_keras.ipynb  build_makemore.ipynb  emojify_with_llm.ipynb  inference_api_tests.restbook  inference_server.py  nlp_embeddings.ipynb  rnn_language_model.ipynb  valid_sentence_prediction.ipynb  wordle_rl_llm_basic.py
local-inference-tests/: models.md  (+3 more)
reinforcement-learning/: Pandapicker_PPO_v1.md  Pandapicker_PPO_v3.md  README.md  multiarmed_bandit.py  panda_pick_cube.ipynb  panda_pick_cube.py  panda_reach_cube.py  ppo_cartpole.ipynb  pyproject.toml
reinforcement-learning/panda-picker/: Pandapicker_PPO_v2.md
(+91 files in other folders)
